[package]
name = "pinewood_derby"
version = "0.1.0"
edition = "2021"
authors = ["Pinewood Derby Team"]
description = "Simple pinewood derby race manager with FastTrack timer support"

[dependencies]
tauri = { version = "2.1", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
